[tool.poetry]
name = "routing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
torch = "^1.8.1"
tqdm = "^4.61.0"
ortools = "^9.0.9048"
timezonefinder = "^5.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
jupyterlab = "^3.0.16"
tensorboard = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
